Fix ipad header image overflow

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -115,6 +115,7 @@ a span {
   margin-left: auto;
   margin-right: auto;
   min-width: 100%;
+  width: 100%;
   height: 400px;
   object-fit: cover;
   opacity: 0.35;
@@ -155,9 +156,9 @@ a span {
     // width: 200px;
   }
   .header-image {
-    max-width: 100%;
-    min-width: 100%;
-    width: 100%;
+    // max-width: 100%;
+    // min-width: 100%;
+    // width: 100%;
     height: 350px;
   }
 }
